<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user">New user</string>
    <string name="welcome">Welcome to Zainco Shoe Store</string>
    <string name="welcome_description">Zainco Shoe Store, buy 1 and take 1 free</string>
    <string name="skip">Skip</string>
    <string name="instructions_title">How to use Shoe Store App?</string>
    <string name="instructions_description">"Adding a new shoe from the shoe list screen "</string>
    <string name="shoe_list">Go to Shoe List</string>
    <string name="details">Details</string>
    <string name="shoe_name">Nike</string>
    <string name="shoe_description">The best Shoes</string>
    <string name="logout">Logout</string>
    <string name="shoe_size">Size</string>
    <string name="shoe_company">Company</string>
    <string name="label_shoe_name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
</resources>
