<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/text_title"
            tools:text="@string/welcome"
            android:text="@string/welcome"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_description"
            android:textSize="16sp"
            tools:text="@string/welcome_description" />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/sign_in_margin_end"
            android:id="@+id/button_skip"
            android:text="@string/skip" />

    </LinearLayout>
</layout>