<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewmodel"
            type="com.udacity.shoestore.list.ShoeListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".details.DetailsFragment">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_shoe_name"
            app:layout_constraintBottom_toTopOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <EditText
            android:id="@+id/editText_shoe_name"
            style="@style/DetailsEditText"
            android:text="@={viewmodel.shoeItem.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" />

        <EditText
            android:id="@+id/editText_shoe_company"
            style="@style/DetailsEditText"
            android:text="@={viewmodel.shoeItem.company}"

            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            style="@style/DetailsEditText"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="343dp" />

        <TextView
            android:id="@+id/textView8"
            style="@style/DetailsTextViews"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/shoe_size"
            app:layout_constraintBottom_toBottomOf="@+id/editText_shoe_size"
            app:layout_constraintEnd_toStartOf="@+id/editText_shoe_size"
            app:layout_constraintTop_toTopOf="@+id/editText_shoe_size" />

        <EditText
            android:id="@+id/editText_shoe_size"
            style="@style/DetailsEditText"
            android:layout_marginEnd="10dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_shoe_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView9"
            style="@style/DetailsTextViews"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/description"
            app:layout_constraintBottom_toBottomOf="@+id/editText_shoe_description"
            app:layout_constraintEnd_toStartOf="@+id/editText_shoe_description"
            app:layout_constraintTop_toTopOf="@+id/editText_shoe_description" />

        <EditText
            android:id="@+id/editText_shoe_description"
            style="@style/DetailsEditText"
            android:layout_marginEnd="10dp"
            android:text="@={viewmodel.shoeItem.description}"
            app:layout_constraintBaseline_toBaselineOf="@+id/editText_shoe_company"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="@{v -> viewmodel.addNewShoe()}"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>