<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        tools:context=".login.LoginFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/image_width"
            android:layout_height="@dimen/image_height"
            android:layout_marginTop="@dimen/image_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_android_24" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="@dimen/email_margin_top_10dp"
            android:text="@string/email"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edittext_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/edittext_email"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/account_circle"
            app:layout_constraintBottom_toTopOf="@+id/textview_password"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textview_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/password"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/edittext_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

        <EditText
            android:id="@+id/edittext_password"
            style="@style/LoginEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/password"
            app:layout_constraintTop_toBottomOf="@+id/textview_password" />

        <Button
            android:id="@+id/button_signin"
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toTopOf="@id/button_signup"
            app:layout_constraintTop_toBottomOf="@id/edittext_password" />

        <Button
            android:id="@+id/button_signup"
            style="@style/LoginButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="@string/new_user"
            android:textAllCaps="false"
            android:textStyle=""
            app:layout_constraintTop_toBottomOf="@id/button_signin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>